Added links for LED resistor calculations to README

--- a/README
+++ b/README
@@ -1,1 +1,11 @@
 starting readme file
+
+
+# Links for LED circuit design:
+
+## LED resistor description
+https://resources.pcb.cadence.com/blog/2022-learn-how-to-limit-current-to-led
+
+## LED resistor calculator 
+https://www.digikey.com/en/resources/conversion-calculators/conversion-calculator-led-series-resistor
+
